# ta-lib-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  justfile
.github/workflows/: ci.yml
crates/ta-lib-capi/: Cargo.toml  build.rs
crates/ta-lib-capi/src/: lib.rs
crates/ta-lib-capi/tests/: c_header_smoke.rs  ta_regtest.rs
crates/ta-lib-codegen/: Cargo.toml
crates/ta-lib-codegen/src/: lib.rs  main.rs
crates/ta-lib-core/: Cargo.toml  build.rs
crates/ta-lib-core/src/: compat.rs  context.rs  helpers.rs  lib.rs  settings.rs
crates/ta-lib-core/src/indicators/: candlestick_ops.rs  directional_ops.rs  ema.rs  hilbert_ops.rs  macd_ops.rs  mod.rs  momentum_ops.rs  oscillator_ops.rs  overlap_ops.rs  price_ops.rs  range_ops.rs  rsi.rs  sma.rs  stats_ops.rs  unary_ops.rs  vector_ops.rs  volatility_ops.rs  volume_ops.rs  window_ops.rs
crates/ta-lib-core/tests/: c_oracle_seed.c  completeness.rs  differential.rs  generated_matrix.rs  generated_oracle_cases.inc
docs/: PARITY.md  PORTING_PLAN.md  RELEASE.md
upstream-ta-lib-c/: .gitignore
